--- a/CssDropDownMenu/CSS/stylesheet.css
+++ b/CssDropDownMenu/CSS/stylesheet.css
@@ -1,10 +1,10 @@
 
 
 #wrapper {
-	width: 100%; /* Spans the width of the page */
+	width: 100%; 
 	height: 52px; 
-	margin: 0; /* Ensures there is no space between sides of the screen and the menu */
-	z-index: 99; /* Makes sure that your menu remains on top of other page elements */
+	margin: 0; 
+	z-index: 99; 
 	position: relative; 
 	background-color: #8E8B87;
 	}
@@ -13,17 +13,17 @@
 	height: 50px;
     padding: 0;
 	margin: 0;
-	position: absolute; /* Ensures that the menu doesn’t affect other elements */
+	position: absolute; 
 	border-right: 1px solid #7F7D7A; 
 	
 	}
 	
 .navbar li 	{
 	height: 50px;
-	width: 150px;  /* Each menu item is 150px wide */
-	float: left;  /* This lines up the menu items horizontally */
-	text-align: center;  /* All text is placed in the center of the box */
-	list-style: none;  /* Removes the default styling (bullets) for the list */
+	width: 150px;  
+	float: left;  
+	text-align: center;  
+	list-style: none;  
 	font: normal bold 12px/1.2em Arial, Verdana, Helvetica;  
 	padding: 0;
 	margin: 0;
@@ -33,11 +33,11 @@
                         
 
 .navbar a	{							
-	padding: 18px 0;  /* Adds a padding on the top and bottom so the text appears centered vertically */
-	border-left: 1px solid #A5A29D; /* Creates a border in a slightly lighter shade of blue than the background.  Combined with the right border, this creates a nice effect. */
-	border-right: 1px solid #7F7D7A; /* Creates a border in a slightly darker shade of blue than the background.  Combined with the left border, this creates a nice effect. */
-	text-decoration: none;  /* Removes the default hyperlink styling. */
-	color: white; /* Text color is white */
+	padding: 18px 0;  
+	border-left: 1px solid #A5A29D; 
+	border-right: 1px solid #7F7D7A; 
+	text-decoration: none;  
+	color: white; 
 	display: block;
 	font-family: Verdana;
 	font-size: 20px;
