--- a/Final/content/CSS/main.css
+++ b/Final/content/CSS/main.css
@@ -5,6 +5,13 @@ body {
 }
 
 
+
+
+
+
+
+
+
 /*************************************************
  *  NavBar
  *************************************************/
@@ -130,7 +137,7 @@ body {
 	color:white;
 }
 
-.add_submit {
+#add_submit {
 	margin-left:20%;
 	margin-top: -5px;
 }
